--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,9 @@ License: copyright commercial
 :root {
   --theme-color-light: #ffffff;
   --theme-color-dark: #171717;
-  --theme-color1: #173a8b;
+  --theme-color1: #08065d;
+  --theme-color4: #173a8b;
+  --theme-color5: #f8b615;
   --bg-theme-color1: var(--theme-color1);
   --theme-color2: #171717;
   --bg-theme-color2: var(--theme-color2);
@@ -1103,7 +1105,8 @@ Scroll To Top style
   text-align: center;
   font-size: 14px;
   color: #ffffff;
-  background-color: #0f0f0f;
+  background-color: var(--theme-color5);
+  border:2px solid var(--theme-color5);
   -webkit-transition: all 300ms ease;
   transition: all 300ms ease;
 }
@@ -1578,7 +1581,7 @@ Scroll To Top style
 }
 .default-navs .owl-next:hover,
 .default-navs .owl-prev:hover {
-  background-color: var(--theme-color2);
+  background-color: var(--theme-color1);
   color: var(--theme-color-light);
 }
 
@@ -1852,7 +1855,7 @@ Scroll To Top style
   bottom: auto;
   width: 110%;
   height: 200%;
-  background: var(--theme-color2);
+  background: var(--theme-color5);
   -webkit-transform-origin: left bottom;
           transform-origin: left bottom;
   -webkit-transform: skewY(-10deg) scale(1, 0);
@@ -1895,7 +1898,7 @@ Scroll To Top style
   color: var(--theme-color-light);
 }
 .btn-style-one.light-bg::before {
-  background-color: var(--theme-color2);
+  background-color: var(--theme-color1);
 }
 .btn-style-one.hover-light:hover {
   color: var(--theme-color2);
@@ -2500,8 +2503,8 @@ Main Header
   display: block;
 }
 .main-header .logo img {
-  max-width: 100%;
-  height: auto;
+  max-width: 100px;
+
 }
 .main-header .main-box {
   position: relative;
@@ -3002,7 +3005,7 @@ Header Style One
   }
 }
 .header-style-two .main-box .logo-box {
-  padding: 32px 0;
+  padding: 10px 0;
   margin-right: 30px;
 }
 @media (max-width: 991.98px) {
@@ -5370,7 +5373,7 @@ Section Title
 }
 .about-section-two .image-column .exp-box {
   position: absolute;
-  left: -125px;
+  left: 0px;
   bottom: 130px;
   padding: 35px 40px;
   background-color: var(--bg-theme-color1);
@@ -5381,7 +5384,6 @@ Section Title
   font-weight: 800;
   background-image: url(../images/icons/lines3.png);
   background-position: left bottom;
-  background-repeat: no-repeat;
 }
 @media (max-width: 1399.98px) {
   .about-section-two .image-column .exp-box {
@@ -5999,7 +6001,7 @@ margin:40px 0px;
   font-weight: 800;
 }
 .services-section-two .bottom-text .theme-btn:hover {
-  background-color: var(--theme-color2);
+  background-color: var(--theme-color5);
   color: var(--theme-color-light);
 }
 
@@ -6146,7 +6148,7 @@ margin:40px 0px;
   transition: all 300ms ease;
 }
 .service-block-two .inner-box .hover-content .read-more:hover {
-  background-color: var(--theme-color2);
+  background-color: var(--theme-color5);
 }
 
 /*** 
@@ -6553,8 +6555,8 @@ margin:40px 0px;
   top: 0;
   height: 100%;
   width: 100%;
-  background: -webkit-gradient(linear, left bottom, left top, from(var(--theme-color1)), to(transparent));
-  background: linear-gradient(to top, var(--theme-color1), transparent);
+  background: -webkit-gradient(linear, left bottom, left top, from(var(--theme-color5)), to(transparent));
+  background: linear-gradient(to top, var(--theme-color5), transparent);
   opacity: 0.9;
   content: "";
 }
@@ -8276,12 +8278,15 @@ margin:40px 0px;
   transition: all 500ms ease;
 }
 .feature-block-two .inner-box:hover {
-  background-color: var(--theme-color2);
+  background-color: var(--theme-color1);
 }
 .feature-block-two .inner-box:hover::before {
   opacity: 0.1;
   -webkit-transition: all 100ms ease;
   transition: all 100ms ease;
+}
+.feature-block-two .inner-box:hover i{
+  color:var(--theme-color5);
 }
 .feature-block-two .inner-box:hover .title {
   color: var(--theme-color-light);
@@ -12892,9 +12897,12 @@ Sidebar
 ==================================================================
 
 ***/
+.footer-logo{
+  width:150px;
+}
 .main-footer {
   position: relative;
-  background-color: var(--theme-color2);
+  background-color: var(--theme-color1);
   /* Widget Section */
 }
 .main-footer .footer-upper {
@@ -12940,7 +12948,7 @@ Sidebar
   left: 0;
   top: 0;
   font-size: 48px;
-  color: var(--theme-color1);
+  color: var(--theme-color5);
 }
 @media (max-width: 575.98px) {
   .contact-info-block .inner .icon {
@@ -13218,7 +13226,7 @@ Sidebar
 .footer-bottom {
   position: relative;
   z-index: 3;
-  background-color: #0f0f0f;
+  background-color: var(--theme-color1);
   padding: 5px 0;
 }
 .footer-bottom .copyright-text {
